frontend/src/Components/Admin/New_Post/styles.css
#root .ql-container {
  border-bottom-left-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
  background: #fefcfc;
}

/* Snow Theme */
#root .ql-snow.ql-toolbar {
  display: block;
  background: #eaecec;
  border-top-left-radius: 0.5em;
  border-top-right-radius: 0.5em;
}

#root .ql-editor {
  min-height: 18em;
  max-height: 30em;
  overflow-y: auto;
}
.react-datepicker-wrapper {
  width: 100% !important;
}
.custom-html h2 {
  font-size: 30px;
  font-weight: 400 !important;
}

.custom-html h3 {
  font-size: 24px;
  font-weight: 500 !important;
}

.custom-html h4 {
  font-size: 20px;
  font-weight: 500 !important;
}

.custom-html h5 {
  font-size: 18px;
}

.custom-html h6 {
  font-size: 16px;
}

.custom-html p {
  font-size: 1rem;
  line-height: 1.6;
  color: black;
  text-align: justify;
}

.custom-html a {
  color: #2563eb; /* Tailwind's `text-blue-600` */
  text-decoration: underline;
}

.custom-html ul {
  padding-left: 40px; /* Add spacing for indentation */
}

.custom-html li {
  list-style-type: disc; /* Can use: disc, square, decimal, etc. */
  margin-bottom: 8px; /* Space between items */
  padding: 5px;
}
.custom-html img {
  width: 100%;
}
/* Responsive Styles */
@media (max-width: 768px) {
  .custom-html h2 {
    font-size: 24px;
  }
  .custom-html h3 {
    font-size: 20px;
  }
  .custom-html h4 {
    font-size: 18px;
  }
  .custom-html h5 {
    font-size: 16px;
  }
  .custom-html h6 {
    font-size: 14px;
  }
  .custom-html p {
    font-size: 0.9rem;
    text-align: justify;
  }
}

@media (max-width: 480px) {
  .custom-html h2 {
    font-size: 20px;
  }
  .custom-html h3 {
    font-size: 18px;
  }
  .custom-html h4 {
    font-size: 16px;
  }
  .custom-html h5 {
    font-size: 14px;
  }
  .custom-html h6 {
    font-size: 12px;
  }
  .custom-html p {
    font-size: 0.85rem;
    line-height: 1.4;
    text-align: justify;
  }
  .custom-html ul {
    padding-left: 20px;
  }
}

.img-responsive {
  width: 100%;
  height: 80px;  /* Default height for small screens */
  object-fit: cover;
}

@media (min-width: 1024px) {
  .img-responsive {
    height: 192px;  /* Height for large screens */
  }
}

